added dao class and api call to freelancer