@@ -1,6 +1,11 @@
 package services;
 
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.HttpURLConnection;
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URL;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
@@ -8,24 +13,25 @@ import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+
+import dao.FreelancerResult;
+import dao.Project;
+
 
 
 public class freeLancerService {
 	
-	public static  <T> List<T>  getActiveProjects() {
-		var client = HttpClient.newHttpClient();
-		var request = HttpRequest.newBuilder(
-			       URI.create("https://www.freelancer.com/api/projects/0.1/projects/active/?compact=true"))
-			   .header("freelancer-oauth-v1", "WTHMHvTf8zHCJOGm4mRvTgq05sgw4H")
-			   .build();
-		var responseFuture = client.sendAsync(request, null);
-		try {
-			var response = ((CompletableFuture<HttpResponse<Object>>) responseFuture).get();
-		} catch (InterruptedException | ExecutionException e) {
-			e.printStackTrace();
-		}
-		
-		return null;
+	public static  FreelancerResult  getActiveProjects() throws IOException {
+		URL url = new URL("https://www.freelancer.com/api/projects/0.1/projects/active/?compact=true");
+		HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+		connection.setRequestProperty("freelancer-oauth-v1", "WTHMHvTf8zHCJOGm4mRvTgq05sgw4H");
+		InputStream responseStream = connection.getInputStream();
+		ObjectMapper mapper = new ObjectMapper();
+		FreelancerResult res = mapper.readValue(responseStream, FreelancerResult.class);
+		System.out.println(res);
+		return res;
     }
+	
 
 }
